manifests/part1/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: default
spec:
  rules:
  - host: helloworld.a.b.c.com
    http:
      paths:
      - path: /
        backend:
          serviceName: helloworld
          servicePort: 8080
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-external
spec:
  podSelector:
    matchLabels:
      app: helloworld
  ingress:
  - from: []
    ports:
    - port: 8080
